# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch:
  Sync vmware-player with the tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch:
  Sync vmware-modules with the tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/files/open-vm.initd,
  -app-emulation/open-vm-tools/files/open-vm-tools-as-needed.patch:
  Sync open-vm-tools with tree. Merge dependencies between x86 and amd64
  arches.

  25 Apr 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-server/files/2.0.0.84186/000_all_initd-location.patc
  h,
  +app-emulation/vmware-server/files/2.0.0.84186/001_all_fix-permissions.pat
  ch,
  +app-emulation/vmware-server/files/2.0.0.84186/002_all_pagebreak-detection
  -fix.patch,
  +app-emulation/vmware-server/files/2.0.0.84186/004_all_do-not-build-module
  s.patch,
  +app-emulation/vmware-server/files/2.0.0.84186/007_all_use-modprobe-over-i
  nsmod.patch,
  +app-emulation/vmware-server/files/2.0.0.84186/009_all_init.d-modules-warn
  ing.patch,
  +app-emulation/vmware-server/files/2.0.0.84186/011_all_legit-modules-only.
  patch:
  Bump vmware-server to version 2 beta 2.

  23 Apr 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-modules/files/patches/vmnet/025_all_kernel-2.6.25.pa
  tch,
  +app-emulation/vmware-modules/files/patches/vmmon/035_all_kernel-2.6.25.pa
  tch,
  +app-emulation/vmware-modules/files/patches/vmblock/010_all_kernel-2.6.25.
  patch:
  Add patches for building under vmware-modules-1.0.0.*-r1 under 2.6.25.

  23 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20080414.87182.ebuild:
  Fix bug 218979, thanks to Brandon Holbrook for pointing this out.

  22 Apr 2008; Mike Auty <ikelos@gentoo.org>