@@ -34,8 +34,8 @@ DIST VMware-server-e.x.p-84186.x86_64.tar.gz 437820906 RMD160 e6d252de2fc9b6830a
 DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 SHA1 f86c4cb076fe1764975e9243dc0fae763f2b589a SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
-EBUILD vmware-server-1.0.4.56528.ebuild 3265 RMD160 3ca6e5245b40fec55644041f0bbbebd528b9d089 SHA1 97abb8b61deaebffb54d5e9d4cb3f8abf9038458 SHA256 d1fd5661e3344392b0027b49cc808148ead684d96e355164617f03d7648f5e09
-EBUILD vmware-server-1.0.5.80187.ebuild 3007 RMD160 48bedcbb0374ec3ec8cd84f386bf7b1ecd4f5152 SHA1 4d3be4771d820621e985f7af4d7ba6e18ef4ea4f SHA256 506b527000745422c4c00e0016f95940a7091f5f7436df78a85147f255c99405
+EBUILD vmware-server-1.0.4.56528.ebuild 3262 RMD160 d3616d549aba38df8b4a46a842811efa571a532c SHA1 e2fa8048a772371398dda1effbedf4169564a03a SHA256 a2f388b163e82b66ef130ea9632c817c967ae60fdc01cab2b2522b18276121f4
+EBUILD vmware-server-1.0.5.80187.ebuild 3004 RMD160 5c1c3ab03afae41541d94e861f073926d8267a3f SHA1 364c93e0820f4efd2327d6cbae02d0ef29657592 SHA256 f0c17110f565620884d4432dbfc1fe15bf355acb93f95aac6a07575d187c3232
 EBUILD vmware-server-2.0.0.63231.ebuild 3237 RMD160 8c8ed359673e494acbb194b323e74ee9158eb69c SHA1 2b43570289f18ab496627f74d029fec346c85bbd SHA256 7ef2fb7f7639ad66208a8fd12f8aaa2eadff96ed5d9096fc88c80c4139c5c6d4
 EBUILD vmware-server-2.0.0.84186.ebuild 2838 RMD160 127fdf8b67e41a040215bf75b06a534cfd0b5ca9 SHA1 c20631f1ccf45ee8b7a0ba2027d46ec67ffc3def SHA256 3c4c30d1f038c1255010aeea551001a4f155a93deb864357edf5e77a826ce5a8
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
